fixed small bugs with review info, fixed date in reviews sections of spotsById component, fixed small bug with new not showing up on previewSpots landing page

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -87,11 +87,14 @@ button:hover {
     margin-top: 5px;
     background-color: rgb(102, 102, 102);
     color: white;
+    height: 25px;
+    width: 100px;
 }
 
 #log-out-button:hover {
     cursor: pointer;
 }
+
 
 #login-button {
     margin-top: 10px;
