--- a/frontend/src/components/Spots/previewSpot.css
+++ b/frontend/src/components/Spots/previewSpot.css
@@ -1,36 +1,62 @@
-.prevSpots {
+#prevSpots {
     height: 350px;
     max-width: 300px;
-    border-radius: 25px;
     display: grid;
     grid-template-rows: repeat(5, 20%);
     grid-template-columns: repeat(2, 50%);
-    margin: 5px;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
     position: relative;
+    transition: all .2s;
+    overflow: hidden;
+}
+
+.prevSpots:hover {
+  transform: scale(0.98);
+  border-radius: 20px;
+}
+
+.shrink:hover {
+  transform: scale(0.98);
+  border-radius: 20px;
+}
+
+#shrink:hover {
+  transform: scale(0.98);
+  border-radius: 20px;
 }
 
 
-
-#image-preview {
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+#image-preview-spots {
+    /* border-top-left-radius: 20px;
+    border-top-right-radius: 20px; */
     grid-row: 1/4;
     grid-column: 1/3;
     justify-self: stretch;
     align-self: stretch;
 }
 
-#prev_spot_info {
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+#image-preview-spots:hover {
+      border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+#prev_spot_info-spots {
+    /* border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px; */
     grid-row:4/6;
     grid-column: 1/3;
     display: grid;
     grid-template-rows: repeat(4, 25%);
     grid-template-columns: repeat(2, 50%);
+    background-color: white;
 }
-#state_country {
+
+.shrink-info:hover {
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+#state_country-spots {
     grid-row: 1/3;
     grid-column: 1/2;
     align-self: self-end;
@@ -70,12 +96,21 @@
     z-index: 0;
     margin-top: 20px;
     margin-bottom: 20px;
+    background-image: linear-gradient(163deg, #eeff00 0%, #ff4444 100%);
+    border-radius: 20px;
+    transition: all .3s;
+    height: 350px;
+    max-width: 300px;
+}
+
+.tooltip-container:hover {
+  box-shadow: 0px 0px 30px 1px rgba(132, 0, 255, 0.3);
 }
 
 span.tooltip {
     position: absolute;
     top: 200px;
-    right: 140px;
+    right: 120px;
     font-size: 14px;
     background: #ffffff;
     color: #ffffff;
